# cuddly-gl

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  active.cc  active.h  armable.cc  armable.h  autogen.sh  bidi.cc  bidi.h  bidi_classes.cc  button.cc  button.h  cache.h  callback.cc  callback.h  composite.cc  composite.h  configure.ac  connect_glfw.cc  connect_glfw.h  font.cc  font.h  fonttest.cc  image.h  label.cc  label.h  manager.cc  manager.h  multi_label.cc  multi_label.h  panel.cc  panel.h  password.cc  password.h  pie_menu.cc  pie_menu.h  (+27 more)
.github/actions/build-and-test/: action.yml
.github/workflows/: coverage.yml  push-build.yml
doc/: Makefile.am  template.md  ui-active.md  ui-armable.md  ui-button.md  ui-composite.md  ui-context.md  ui-font.md  ui-label.md  ui-manager.md  ui-password.md  ui-pie_menu.md  ui-radio_box.md  ui-rect.md  ui-row_column.md  ui-text_field.md  ui-toggle.md  ui-utf8tou32str.md  ui-vertex_buffer.md  ui-widget.md  ui.md  ui::active.md  ui::rect.md  ui::vertex_buffer.md
m4/: ax_enable_profile.m4  ax_prog_perl_modules.m4
shaders/: Makefile.am  ui_fragment.2.glsl  ui_fragment.3.glsl  ui_fragment.4.glsl  ui_fragment.glsl  ui_vertex.2.glsl  ui_vertex.3.glsl  ui_vertex.330.glsl  ui_vertex.4.glsl
test/: .gitignore  Makefile.am  fonttest.cc  run-uitest  t_active.cc  t_bidi.cc  t_rect.cc  t_util.cc  uitest.cc  validate_shaders
test/tap++/: Makefile.am  tap++.C  tap++.h
